--- a/styles/index.css
+++ b/styles/index.css
@@ -51,3 +51,59 @@
     border-radius: 24px;
     margin:24px 10px;
 }
+.offer-btn{
+    display: flex;
+    justify-content: center;
+}
+
+/*
+
+ *** 
+*
+  *   BOOKING SECTION
+    *
+   *
+***
+
+*/
+
+.booking-section{
+    box-sizing: border-box;
+    border-top: 2px solid rgb(29, 209, 0);
+    border-radius: 88px 88px 0px 0px;
+    background: rgb(247, 248, 248);
+}
+.input-bottom-border{
+    border-bottom:1px dashed rgba(3, 7, 18, 0.2);
+}
+.elipsee{
+    display: flex;
+    /* align-content: space-between; */
+    flex-direction: column;
+}
+.booking-section .elipse-3{
+    width: 80px;
+    height: 10.41%;
+    background: rgb(247, 248, 248);
+    border-bottom-left-radius: 90px;
+    border-bottom-right-radius: 90px;
+}
+.booking-section .elipse-4{
+    width: 80px;
+    height: 10.41%;
+    background: rgb(247, 248, 248);
+    border-top-left-radius: 90px;
+    border-top-right-radius: 90px;
+}
+.solid-rock .small-border{
+    border: 2px dashed rgb(29, 209, 0);
+}
+
+@media only screen and (max-width:992px) {
+    .solid-rock .elipsee{
+       display: none;
+    }
+}
+@media only screen and (max-width:640px) {
+   
+}
